<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Brewsky</string>

    <!-- Strings for logs -->
    <string name="log_general">Brewsky</string>
    <string name="log_implement">BrewskyImplement</string>
    <string name="log_wtf">BrewskyWTF</string>

    <!-- Application strings -->
    <string name="hello_world">Hello world!</string>
    <string name="no_recipe_desc">No description for this recipe</string>
    <string name="step">Step: %1$d</string>
    <string name="time_left">Time: %1d</string>
    <string name="instructions">Instructions</string>
    <string name="filter_button">Filter</string>

    <!-- Activity title strings -->
    <string name="title_activity_favorites">Favorite Beers</string>
    <string name="title_activity_recipe_detail">Recipe Details</string>
    <string name="title_activity_recipe_instructions">Instructions</string>
    <string name="title_activity_recipe_list">Recipe List</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_filter">Filters</string>
    <string name="title_activity_add_recipe">Add A Recipe</string>
    <string name="title_activity_comment">CommentActivity</string>

    <!-- API strings -->
    <string name="api_url">http://api.malt.io</string>
    <string name="title_activity_alarm_receiver">AlarmReceiverActivity</string>

    <!-- Menu strings -->
    <string name="add_recipe_menu_title">Add Recipe</string>
    <string name="favorites_menu_title">Favorites</string>
    <string name="filter_menu_title">Filter Recipes</string>
    <string name="action_settings">Settings</string>

    <!-- Service/Broadcast -->
    <string name="brewsky_broadcast">BROADCAST_BREWSKY_CLASS</string>
    <string name="broadcast_new_recipes">NEW_RECIPES_ADDED</string>

    <string-array name="types">
        <item>All</item>
        <item>IPA</item>
        <item>APA</item>
        <item>Amber Ale</item>
        <item>Hefeweizen</item>
        <item>Stout</item>
    </string-array>
    <string-array name="abvs">
        <item>All</item>
        <item>5.0-5.2%</item>
        <item>5.2-5.7%</item>
        <item>5.7-6.1%</item>
        <item>6.1-7%</item>
    </string-array>
    <string-array name="ratings">
        <item>All</item>
        <item>1 Star</item>
        <item>2 Star</item>
        <item>3 Star</item>
        <item>4 Star</item>
        <item>5 Star</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
