<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.uw.informatics.brewsky.RecipeListActivity">
    <item
        android:id="@+id/filter_menu_button"
        android:title="@string/filter_menu_title"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_recipe_menu_button"
        android:title="@string/add_recipe_menu_title"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings_menu_button"
        android:title="@string/title_activity_settings"
        android:orderInCategory="300"
        app:showAsAction="never" />
</menu>
